# Physical-AI-Humanoid-Robotics

./: .gitignore  PROJECT_SUMMARY.md  README.md
.specify/memory/: constitution.md
agents/src/: __init__.py
agents/src/agents/: __init__.py
agents/src/skills/: __init__.py  personalization_skill.py  question_answering_skill.py  translation_skill.py
agents/src/utils/: __init__.py
backend/: .env.example  .gitignore  API.md  README.md  agent.py  api.py  config.py  crawler.py  demo_gemini_agent.py  embedding_generator.py  main.py  pyproject.toml  requirements.txt  retrieve.py  test_agent.py  test_api.py  test_pipeline.py  text_processor.py  utils.py  vector_storage.py
history/adr/: ADR-1-Frontend-Chatbot-UI-Architecture-for-Docusaurus-Integration.md
history/prompts/4-fastapi-integration/: 1-fastapi-integration-planning.plan.prompt.md  2-fastapi-tasks-generation.tasks.prompt.md  3-frontend-backend-integration-planning.plan.prompt.md  (+3 more)
specs/1-rag-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-rag-ingestion-pipeline/: spec.md  tasks.md
specs/4-fastapi-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/master/: plan.md  quickstart.md  spec.md  tasks.md
specs/physical-ai-textbook/: data-model.md
website/: README.md  docusaurus.config.ts  package-lock.json  sidebars.ts  tsconfig.json
website/blog/: 2019-05-28-first-blog-post.md  2019-05-29-long-blog-post.md  2021-08-01-mdx-blog-post.mdx  authors.yml  tags.yml
website/docs/: intro.md
website/static/: assets-readme.md
(+43 files in other folders)
